More parallax fixes to address flicker on mobile

--- a/components/parallax-container/parallax-container.module.css
+++ b/components/parallax-container/parallax-container.module.css
@@ -3,6 +3,7 @@
     --mountain-length: min(100vw, var(--max-layout-width));
     --sky-color: var(--pink-4);
     --water-color: var(--indigo-4);
+    --front-upper-mountain-color: #548f97;
     margin: auto;
     max-width: var(--max-layout-width);
     background-color: var(--water-color);
@@ -20,7 +21,7 @@
 .contentContainer {
     grid-row-start: 1;
     grid-column-start: 1;
-    z-index: var(--layer-2);
+    z-index: var(--layer-4);
     background-image:
         linear-gradient(rgba(0, 0, 0, 0.1),
             rgba(0, 0, 0, 0.2));
@@ -30,6 +31,7 @@
     background-color: var(--sky-color);
     height: 100vh;
     width: var(--mountain-length);
+    z-index: var(--layer-1);
 }
 
 .mountainsUpper {
@@ -39,12 +41,13 @@
     width: var(--mountain-length);
     background: var(--sky-color) url('/mountains-upper.svg') no-repeat center;
     background-size: contain;
+    z-index: var(--layer-2);
 }
 
 /* Filler material incase we can see under the image */
 .mountainsUpper::before {
     position: absolute;
-    background-color: #548f97;
+    background-color: var(--front-upper-mountain-color);
     /* Cant use 100%. We need the overlap so that this filler blends in. */
     top: 99%;
     left: 0;
@@ -53,12 +56,18 @@
     content: '';
 }
 
+.mountainsUpperFiller {
+    width: 100%;
+    height: 50vh;
+    z-index: var(--layer-2);
+}
+
 .mountainsLower {
     width: var(--mountain-length);
     height: var(--mountain-length);
     background: url('/mountains-front.svg') no-repeat center;
     background-size: contain;
-    /* margin-top: calc(var(--mountain-length) / -4); */
+    z-index: var(--layer-3);
     position: relative;
 }
 
